fix: 1. fix sticky items flickering when scroll from container bottom to top(when at the trigger coordinate) 2. stop loop when container is unable to sticky

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,12 @@
 .oe-sticky {
   &-container {
     position: relative;
+
+    &.can-sticky {
+      .oe-sticky-content.is-sticky {
+        position: fixed;
+      }
+    }
   }
 
   &-item {
@@ -14,10 +20,8 @@
 
   &-content {
     will-change: top, position;
-
-    &.is-sticky {
-      position: fixed;
-    }
   }
+
+  
 }
 
